--- a/NND/MainWindow.xaml
+++ b/NND/MainWindow.xaml
@@ -7,6 +7,7 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        
+        <ListBox x:Name="listBox" HorizontalAlignment="Left" Height="332" Margin="23,22,0,0" VerticalAlignment="Top" Width="216"/>
+        <Button x:Name="button" Content="Add" HorizontalAlignment="Left" Margin="23,373,0,0" VerticalAlignment="Top" Width="216" Click="Button_Click"/>
     </Grid>
 </Window>
