--- a/NND/MainWindow.xaml
+++ b/NND/MainWindow.xaml
@@ -5,14 +5,14 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:NND"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
-        <ListBox x:Name="listBox" HorizontalAlignment="Left" Height="330" Margin="20,20,0,0" VerticalAlignment="Top" Width="220"/>
-        <Button x:Name="add" Content="Add" HorizontalAlignment="Left" Margin="20,370,0,0" VerticalAlignment="Top" Width="220" Click="Add_Click"/>
-        <ListBox x:Name="listBox1" HorizontalAlignment="Left" Height="330" Margin="265,20,0,0" VerticalAlignment="Top" Width="245" SelectionChanged="ListBox1_SelectionChanged"/>
-        <Button x:Name="button1" Content="Remove" HorizontalAlignment="Left" Height="20" Margin="265,370,0,0" VerticalAlignment="Top" Width="245" Click="Remove_Click"/>
-        <ListBox x:Name="listBox2" HorizontalAlignment="Left" Height="240" Margin="525,20,0,0" VerticalAlignment="Top" Width="240" SelectionChanged="ListBox2_SelectionChanged"/>
-        <TextBox x:Name="textBox" HorizontalAlignment="Left" Height="25" Margin="525,290,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="240" TextChanged="TextBox_TextChanged"/>
-        <Button x:Name="button3" Content="Save to JSON" HorizontalAlignment="Left" Margin="525,370,0,0" VerticalAlignment="Top" Width="240" Click="Save_Click"/>
+        Title="MainWindow" Height="470" Width="835" MinWidth="835" MinHeight="470">
+    <Grid MinWidth="840" Width="840" Height="450" MinHeight="450">
+        <ListBox x:Name="listBox" Height="330" Margin="20,20,552,69" HorizontalAlignment="Left" VerticalAlignment="Top" Width="220" MinWidth="220" MinHeight="330"/>
+        <Button x:Name="add" Content="Add" HorizontalAlignment="Left" Margin="20,0,0,29" VerticalAlignment="Bottom" Width="220" Click="Add_Click"/>
+        <ListBox x:Name="listBox1" Height="330" Margin="265,20,282,69" Width="245" SelectionChanged="ListBox1_SelectionChanged" VerticalAlignment="Top" HorizontalAlignment="Center" MinWidth="245" MinHeight="330"/>
+        <Button x:Name="button1" Content="Remove" HorizontalAlignment="Center" Height="20" Margin="265,0,282,29" VerticalAlignment="Bottom" Width="245" Click="Remove_Click"/>
+        <ListBox x:Name="listBox2" Height="240" Margin="0,20,27,0" Width="240" SelectionChanged="ListBox2_SelectionChanged" HorizontalAlignment="Right" VerticalAlignment="Top" MinWidth="240" MinHeight="240"/>
+        <TextBox x:Name="textBox" Height="26" Margin="560,289,27,124" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Center" Width="240" TextChanged="TextBox_TextChanged" HorizontalAlignment="Right" MinWidth="240" MinHeight="26"/>
+        <Button x:Name="button3" Content="Save to JSON" HorizontalAlignment="Right" Margin="0,0,27,29" VerticalAlignment="Bottom" Width="240" Click="Save_Click"/>
     </Grid>
 </Window>
